--- a/SampleApp1.html
+++ b/SampleApp1.html
@@ -109,13 +109,13 @@
         <script src="framework/Live2DFramework.js"></script>
         
         <!-- User's Script -->
-        <script src="sample/sampleApp1/src/utils/MatrixStack.js"></script>
-        <script src="sample/sampleApp1/src/utils/ModelSettingJson.js"></script>
-        <script src="sample/sampleApp1/src/PlatformManager.js"></script>
-        <script src="sample/sampleApp1/src/LAppDefine.js"></script>
-        <script src="sample/sampleApp1/src/LAppModel.js"></script>
-        <script src="sample/sampleApp1/src/LAppLive2DManager.js"></script>
-        <script src="sample/sampleApp1/src/SampleApp1.js"></script>
+        <script src="sample/src/utils/MatrixStack.js"></script>
+        <script src="sample/src/utils/ModelSettingJson.js"></script>
+        <script src="sample/src/PlatformManager.js"></script>
+        <script src="sample/src/LAppDefine.js"></script>
+        <script src="sample/src/LAppModel.js"></script>
+        <script src="sample/src/LAppLive2DManager.js"></script>
+        <script src="sample/src/SampleApp1.js"></script>
 
     </body>
 </html>
